src/objects/BMCServiceDesk__SYSTemplateFieldInfo__c.object
<CustomObject>
    <description>This object allows you to store data for the fields related to the templates.</description>
    <fields>
        <fullName>BMCServiceDesk__FKSYSTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSTemplate</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>SYSTemplateFieldInfo</relationshipLabel>
        <relationshipName>SYSTemplateFieldInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldId__c</fullName>
        <label>Lookup Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__From_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used internally to control trigger action configured for importing templates from RF Template Migration package.</description>
        <inlineHelpText>Internally used</inlineHelpText>
        <label>From import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__fieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__fieldValue__c</fullName>
        <label>Field Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Template Field Info</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSTemplateFieldInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>